typescript/checker/tests/conformance/es6/Symbols/symbolType5.ts.stderr
error: TS2362 {
    span: Span {
        lo: BytePos(
            49,
        ),
        hi: BytePos(
            50,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/Symbols/symbolType5.ts:3:1
  |
3 | s * s;
  | ^

error: TS2363 {
    span: Span {
        lo: BytePos(
            53,
        ),
        hi: BytePos(
            54,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/Symbols/symbolType5.ts:3:5
  |
3 | s * s;
  |     ^

error: TS2362 {
    span: Span {
        lo: BytePos(
            57,
        ),
        hi: BytePos(
            58,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/Symbols/symbolType5.ts:4:1
  |
4 | s / s;
  | ^

error: TS2363 {
    span: Span {
        lo: BytePos(
            61,
        ),
        hi: BytePos(
            62,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/Symbols/symbolType5.ts:4:5
  |
4 | s / s;
  |     ^

error: TS2362 {
    span: Span {
        lo: BytePos(
            65,
        ),
        hi: BytePos(
            66,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/Symbols/symbolType5.ts:5:1
  |
5 | s % s;
  | ^

error: TS2363 {
    span: Span {
        lo: BytePos(
            69,
        ),
        hi: BytePos(
            70,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/Symbols/symbolType5.ts:5:5
  |
5 | s % s;
  |     ^

error: TS2362 {
    span: Span {
        lo: BytePos(
            75,
        ),
        hi: BytePos(
            76,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/Symbols/symbolType5.ts:7:1
  |
7 | s * 0;
  | ^

error: TS2363 {
    span: Span {
        lo: BytePos(
            87,
        ),
        hi: BytePos(
            88,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/Symbols/symbolType5.ts:8:5
  |
8 | 0 / s;
  |     ^

